Test section small design fixes. Functionality for removing sessions by bean name. Test  brutal bug fixes (wrong redirection, keeping old data from prev. test)

--- a/mse11as/WebContent/css/global.css
+++ b/mse11as/WebContent/css/global.css
@@ -256,3 +256,6 @@ h1 a:hover, h2 a:hover {
 	text-decoration:none;
 	color:#000000;
 }
+textarea, input[type="text"], input[type="password"], select {
+	background: none !important;
+}
